--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,9 @@
 steps:
+  - name: node,
+    entrypoit: npm
+    args: ['install']
+  - name: node,
+    entrypoit: npm
+    args: ['run build']
   - name: 'gcr.io/saas-ready/firebase'
     args: ['deploy', '--project=saas-ready', '--only=hosting']
