--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     entrypoint: npm
     args: ['install']
   - name: node,
-    entrypoit: npm
+    entrypoint: npm
     args: ['run build']
   - name: 'gcr.io/saas-ready/firebase'
     args: ['deploy', '--project=saas-ready', '--only=hosting']
